5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1650_2731.log
== SUBMITION (2019-04-15 13:46:34) 
-- CODE:
a = float(input("coeficiente a: "))
b = float(input("coeficiente b: "))
r = float(input("raio r: "))

C=(a,b)
if(C>=0):
	print("Superiores")
else:
	print("Inferiores")
-- EXECUTION TIME:
0.126177
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2731/main.py", line 6, in <module>
    if(C>=0):
TypeError: unorderable types: tuple() >= int()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:46:38) 
-- CODE:
a = float(input("coeficiente a: "))
b = float(input("coeficiente b: "))
r = float(input("raio r: "))

C=(a,b)
if(C>=0):
	print("Superiores")
else:
	print("Inferiores")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(C>=0):
TypeError: '>=' not supported between instances of 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:47:13) 
-- CODE:
a = float(input("coeficiente a: "))
b = float(input("coeficiente b: "))
r = float(input("raio r: "))

C=(a,b)
ifC>=0:
	print("Superiores")
else:
	print("Inferiores")
	
-- EXECUTION TIME:
0.154801
-- ERROR:
  File "/home/codebench/codes/1650/2731/main.py", line 6
    ifC>=0:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:47:27) 
-- CODE:
a = float(input("coeficiente a: "))
b = float(input("coeficiente b: "))
r = float(input("raio r: "))

C=(a,b)
if C >= 0:
	print("Superiores")
else:
	print("Inferiores")
	
-- EXECUTION TIME:
0.205106
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2731/main.py", line 6, in <module>
    if C >= 0:
TypeError: unorderable types: tuple() >= int()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:47:28) 
-- CODE:
a = float(input("coeficiente a: "))
b = float(input("coeficiente b: "))
r = float(input("raio r: "))

C=(a,b)
if C >= 0:
	print("Superiores")
else:
	print("Inferiores")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if C >= 0:
TypeError: '>=' not supported between instances of 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:48:36) 
-- CODE:
a = float(input("coeficiente a: "))
b = float(input("coeficiente b: "))
r = float(input("raio r: "))

C=(a,b)
if C >= 0:
	print("Superiores")
else:
	print("Inferiores")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if C >= 0:
TypeError: '>=' not supported between instances of 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:49:26) 
-- CODE:
a = float(input("coeficiente a: "))
b = float(input("coeficiente b: "))
r = float(input("raio r: "))

C=(a,b)
if b >=0:
	print("Superiores")
else:
	print("Inferiores")
	
-- EXECUTION TIME:
0.159224
-- TEST CASE 1:
---- input:
4.5
-2.2
3
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
3
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
1
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
